--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Products</title>
   </head>
+
   <body>
-    <h1>All Products</h1>
+    <h1><%= category%> Products!</h1>
     <ul>
       <% for(let product of products) { %>
       <li><a href="/products/<%=product._id%>"><%= product.name %></a></li>
-      <% } %>
+      <% }%>
     </ul>
+    <a href="/products/new">New Product</a>
+    <%if(category !== 'All') {%>
+    <a href="/products">All Products</a>
+    <% } %>
   </body>
 </html>
